@startuml TechStoreFactoryPattern

skinparam class {
    BackgroundColor<<Factory>> LightBlue
    BackgroundColor<<Product>> LightGreen
    BackgroundColor<<User>> LightYellow
    BackgroundColor<<Builder>> LightPink
    BackgroundColor<<Singleton>> LightGray
}

class ProductFactory <<Factory>> {
    + createProduct(name: String, description: String, price: double, category: Category, brand: String, warrantyMonths: int, discount: double): Product
    + createBasicProduct(name: String, price: double, category: Category): Product
}

class UserFactory <<Factory>> {
    + UserType {ADMIN, CLIENT}
    + createUser(type: UserType, username: String, password: String, email: String): User
}

class ProductBuilder <<Builder>> {
    + ProductBuilder(id: int, name: String, price: double)
    + description(description: String): ProductBuilder
    + category(category: Category): ProductBuilder
    + brand(brand: String): ProductBuilder
    + warrantyMonths(warrantyMonths: int): ProductBuilder
    + discount(discount: double): ProductBuilder
    + build(): Product
}

class CatalogueManager <<Singleton>> {
    - instance: CatalogueManager
    + getInstance(): CatalogueManager
    + getNextProductId(): int
}

interface User {
    + {abstract} getUsername(): String
    + {abstract} getEmail(): String
}

class Admin {
    + Admin(username: String, password: String, email: String)
}

class Client {
    + Client(username: String, password: String, email: String)
}

ProductFactory --> ProductBuilder : uses
ProductFactory --> CatalogueManager : gets ID from
ProductBuilder ..> Product : creates

UserFactory --> Admin : creates
UserFactory --> Client : creates
Admin --|> User
Client --|> User

note top of ProductFactory
  <<Factory>>
  • Combines Factory and Builder patterns
  • Centralizes product creation logic
  • Uses Singleton for ID generation
end note

note right of UserFactory
  <<Factory>>
  • Simple factory implementation
  • Creates different user types
  • Uses enum for type safety
end note

@enduml